--- a/style.css
+++ b/style.css
@@ -1,58 +1,533 @@
-* {
-    outline: none;
-    overflow: visible !important;
+@media screen and (min-width: 280px){
+    * {
+        outline: none;
+        font-family: 'Noto Sans KR', sans-serif;
+    }
+    
+    body {
+        margin: 0;
+        padding: 0;
+        overflow: hidden !important;
+    }
+    
+    .slider {
+        margin-top: 15%;
+    }
+
+    .itm {
+        left: 0;
+        right: 0;
+        display: inline;
+        position: relative;
+        background: rgb(255, 222, 113);
+        height: 400px;
+    }
+
+    .slick-dots {
+        position: relative;
+        top: 350px;
+        z-index: 10;
+    }
+
+    .txt__Box{
+        display: inline-block;
+        margin: 20px;
+    }
+    .txt__Title{
+        font-weight: 900;
+        font-size: 25px;
+    }
+    .txt__Info{
+        margin-top: -5px;
+        font-weight: 200;
+        font-size: 15px;
+    }
+
+    .itm__Img{
+        position: absolute;
+        height: 180px;
+        margin-right: 10%;
+        bottom: 50px;
+        right: 0;
+    }
+
+    .txt__mre--Info{
+        text-align: center;
+        margin-top: 10px;
+        position: absolute;
+        margin-left: 20px;
+        left: 0;
+        border: none;
+        width: 100px;
+        height: 30px;
+        border-radius: 10px 10px 10px 10px;
+        background-color: white;
+    }
 }
 
-body {
-    margin: 0;
-    padding: 0;
-    overflow: hidden !important;
+@media screen and (min-width: 375px){
+    * {
+        outline: none;
+        font-family: 'Noto Sans KR', sans-serif;
+    }
+    
+    body {
+        margin: 0;
+        padding: 0;
+        overflow: hidden !important;
+    }
+    
+    .slider {
+        margin-top: 15%;
+    }
+
+    .itm {
+        left: 0;
+        right: 0;
+        display: inline;
+        position: relative;
+        background: rgb(255, 222, 113);
+        height: 400px;
+    }
+
+    .slick-dots {
+        position: relative;
+        top: 350px;
+        z-index: 10;
+    }
+
+    .txt__Box{
+        display: inline-block;
+        margin: 20px;
+    }
+    .txt__Title{
+        font-weight: 900;
+        font-size: 30px;
+    }
+    .txt__Info{
+        margin-top: -5px;
+        font-weight: 200;
+        font-size: 20px;
+    }
+
+    .itm__Img{
+        position: absolute;
+        height: 200px;
+        margin-right: 5%;
+        bottom: 50px;
+        right: 0;
+    }
+
+    .txt__mre--Info{
+        text-align: center;
+        margin-top: 10px;
+        position: absolute;
+        margin-left: 20px;
+        left: 0;
+        border: none;
+        width: 100px;
+        height: 30px;
+        border-radius: 10px 10px 10px 10px;
+        background-color: white;
+    }
 }
 
-.slider {
-    margin-top: 15%;
+@media screen and (min-width: 414px){
+    * {
+        outline: none;
+        /* overflow: visible !important; */
+        font-family: 'Noto Sans KR', sans-serif;
+    }
+    
+    body {
+        margin: 0;
+        padding: 0;
+        overflow: hidden !important;
+    }
+    
+    .slider {
+        margin-top: 15%;
+    }
+
+    .itm {
+        left: 0;
+        right: 0;
+        display: inline;
+        position: relative;
+        background: rgb(255, 222, 113);
+        height: 400px;
+    }
+
+    .slick-dots {
+        position: relative;
+        top: 350px;
+        z-index: 10;
+    }
+
+    .txt__Box{
+        display: inline-block;
+        margin: 20px;
+    }
+    .txt__Title{
+        font-weight: 900;
+        font-size: 30px;
+    }
+    .txt__Info{
+        margin-top: -5px;
+        font-weight: 200;
+        font-size: 20px;
+    }
+
+    .itm__Img{
+        position: absolute;
+        height: 200px;
+        margin-right: 5%;
+        bottom: 50px;
+        right: 0;
+    }
+
+    .txt__mre--Info{
+        text-align: center;
+        margin-top: 10px;
+        position: absolute;
+        margin-left: 20px;
+        left: 0;
+        border: none;
+        width: 100px;
+        height: 30px;
+        border-radius: 10px 10px 10px 10px;
+        background-color: white;
+    }
 }
-.itm {
-    left: 0;
-    right: 0;
-    display: inline;
-    position: relative;
-    background: rgb(255, 222, 113);
-    height: 220px;
+
+@media screen and (min-width: 768px){
+    * {
+        outline: none;
+        /* overflow: visible !important; */
+        font-family: 'Noto Sans KR', sans-serif;
+    }
+    
+    body {
+        margin: 0;
+        padding: 0;
+        overflow: hidden !important;
+    }
+    
+    .slider {
+        margin-top: 15%;
+    }
+
+    .itm {
+        left: 0;
+        right: 0;
+        display: inline;
+        position: relative;
+        background: rgb(255, 222, 113);
+        height: 400px;
+    }
+
+    .slick-dots {
+        position: relative;
+        top: 350px;
+        z-index: 10;
+    }
+
+    .txt__Box{
+        display: inline-block;
+        margin: 20px;
+    }
+    .txt__Title{
+        font-weight: 900;
+        font-size: 30px;
+    }
+    .txt__Info{
+        margin-top: -5px;
+        font-weight: 200;
+        font-size: 20px;
+    }
+
+    .itm__Img{
+        position: absolute;
+        height: 300px;
+        margin-right: 5%;
+        bottom: 50px;
+        right: 0;
+    }
+
+    .txt__mre--Info{
+        text-align: center;
+        margin-top: 10px;
+        position: absolute;
+        margin-left: 20px;
+        left: 0;
+        border: none;
+        width: 100px;
+        height: 30px;
+        border-radius: 10px 10px 10px 10px;
+        background-color: white;
+    }
 }
-.slick-dots {
-    position: relative;
-    top: 180px;
-    z-index: 10;
+
+@media screen and (min-width: 1025px){
+    * {
+        outline: none;
+        /* overflow: visible !important; */
+        font-family: 'Noto Sans KR', sans-serif;
+    }
+    
+    body {
+        margin: 0;
+        padding: 0;
+        overflow: hidden !important;
+    }
+    
+    .slider {
+        margin-top: 15%;
+    }
+
+    .itm {
+        left: 0;
+        right: 0;
+        display: inline;
+        position: relative;
+        background: rgb(255, 222, 113);
+        height: 400px;
+    }
+
+    .slick-dots {
+        position: relative;
+        top: 350px;
+        z-index: 10;
+    }
+
+    .txt__Box{
+        display: inline-block;
+        margin: 20px;
+    }
+    .txt__Title{
+        font-weight: 900;
+        font-size: 30px;
+    }
+    .txt__Info{
+        margin-top: -5px;
+        font-weight: 200;
+        font-size: 20px;
+    }
+
+    .itm__Img{
+        position: absolute;
+        height: 300px;
+        margin-right: 5%;
+        bottom: 20px;
+        right: 0;
+    }
+
+    .txt__mre--Info{
+        text-align: center;
+        margin-top: 10px;
+        position: absolute;
+        margin-left: 20px;
+        left: 0;
+        border: none;
+        width: 100px;
+        height: 30px;
+        border-radius: 10px 10px 10px 10px;
+        background-color: white;
+    }
 }
-.txtBox{
-    display: inline-block;
-    margin: 50px;
-    margin-left: 500px;
+
+@media screen and (min-width: 1065px){
+    * {
+        outline: none;
+        /* overflow: visible !important; */
+        font-family: 'Noto Sans KR', sans-serif;
+    }
+    
+    body {
+        margin: 0;
+        padding: 0;
+        overflow: hidden !important;
+    }
+    
+    .slider {
+        margin-top: 15%;
+    }
+
+    .itm {
+        left: 0;
+        right: 0;
+        display: inline;
+        position: relative;
+        background: rgb(255, 222, 113);
+        height: 400px;
+    }
+
+    .slick-dots {
+        position: relative;
+        top: 350px;
+        z-index: 10;
+    }
+
+    .txt__Box{
+        display: inline-block;
+        margin: 20px;
+    }
+    .txt__Title{
+        font-weight: 900;
+        font-size: 30px;
+    }
+    .txt__Info{
+        margin-top: -5px;
+        font-weight: 200;
+        font-size: 20px;
+    }
+
+    .itm__Img{
+        position: absolute;
+        height: 300px;
+        margin-right: 5%;
+        bottom: 20px;
+        right: 0;
+    }
+
+    .txt__mre--Info{
+        text-align: center;
+        margin-top: 10px;
+        position: absolute;
+        margin-left: 20px;
+        left: 0;
+        border: none;
+        width: 100px;
+        height: 30px;
+        border-radius: 10px 10px 10px 10px;
+        background-color: white;
+    }
 }
-.txtTitle{
-    font-weight: bolder;
-    font-size: 30px;
+
+@media screen and (min-width: 1080px){
+    * {
+        outline: none;
+        overflow: visible !important;
+        font-family: 'Noto Sans KR', sans-serif;
+    }
+    
+    body {
+        margin: 0;
+        padding: 0;
+        overflow: hidden !important;
+    }
+    
+    .slider {
+        margin-top: 15%;
+    }
+    .itm {
+        left: 0;
+        right: 0;
+        display: inline;
+        position: relative;
+        background: rgb(255, 222, 113);
+        height: 220px;
+    }
+    .slick-dots {
+        position: relative;
+        top: 180px;
+        z-index: 10;
+    }
+    .txt__Box{
+        display: inline-block;
+        margin: 50px;
+        margin-left: 300px;
+    }
+    .txt__Title{
+        font-weight: 900;
+        font-size: 30px;
+    }
+    .txt__Info{
+        margin-top: -5px;
+        font-weight: 200;
+        font-size: 20px;
+    }
+    .itm__Img{
+        position: absolute;
+        height: 250px;
+        margin-right: 20%;
+        bottom: 10px;
+        right: 0;
+    }
+    .txt__mre--Info{
+        text-align: center;
+        margin-top: 10px;
+        position: absolute;
+        margin-left: 300px;
+        left: 0;
+        border: none;
+        width: 100px;
+        height: 30px;
+        border-radius: 10px 10px 10px 10px;
+        background-color: white;
+    }
 }
-.txtInfo{
-    margin-top: -5px;
-    font-size: 20px;
-}
-.itmImg{
-    position: absolute;
-    height: 300px;
-    margin-right: 500px;
-    bottom: 10px;
-    right: 0;
-}
-.mreInfo{
-    position: absolute;
-    margin-top: 150px;
-    margin-left: 500px;
-    left: 0;
-    border: none;
-    width: 100px;
-    height: 30px;
-    border-radius: 10px 10px 10px 10px;
-    background-color: white;
+
+@media screen and (min-width: 1680px){
+    * {
+        outline: none;
+        overflow: visible !important;
+        font-family: 'Noto Sans KR', sans-serif;
+    }
+    
+    body {
+        margin: 0;
+        padding: 0;
+        overflow: hidden !important;
+    }
+    
+    .slider {
+        margin-top: 15%;
+    }
+    .itm {
+        left: 0;
+        right: 0;
+        display: inline;
+        position: relative;
+        background: rgb(255, 222, 113);
+        height: 220px;
+    }
+    .slick-dots {
+        position: relative;
+        top: 180px;
+        z-index: 10;
+    }
+    .txt__Box{
+        display: inline-block;
+        margin: 50px;
+        margin-left: 500px;
+    }
+    .txt__Title{
+        font-weight: 900;
+        font-size: 30px;
+    }
+    .txt__Info{
+        margin-top: -5px;
+        font-weight: 200;
+        font-size: 20px;
+    }
+    .itm__Img{
+        position: absolute;
+        height: 250px;
+        margin-right: 25%;
+        bottom: 10px;
+        right: 0;
+    }
+    .txt__mre--Info{
+        text-align: center;
+        margin-top: 10px;
+        position: absolute;
+        margin-left: 500px;
+        left: 0;
+        border: none;
+        width: 100px;
+        height: 30px;
+        border-radius: 10px 10px 10px 10px;
+        background-color: white;
+    }
 }
